# Rust-Programming-Vulnerabilities-Using-ML-And-StaticAnalysis

./: Cargo.toml  Rust System Programming vulnerabilities using ML and static analysis for small dataset ppt.pptx  generate_ir.sh
dataset/: metadata.csv
dataset/safe/: safe_snippet_1.rs  safe_snippet_10.rs  safe_snippet_11.rs  safe_snippet_2.rs  safe_snippet_3.rs  safe_snippet_5.rs  safe_snippet_6.rs  safe_snippet_7.rs  safe_snippet_8.rs  safe_snippet_9.rs
dataset/unsafe/: unsafe_snippet_1.rs  unsafe_snippet_10.rs  unsafe_snippet_11.rs  unsafe_snippet_2.rs  unsafe_snippet_3.rs  unsafe_snippet_5.rs  unsafe_snippet_6.rs  unsafe_snippet_7.rs  unsafe_snippet_8.rs  unsafe_snippet_9.rs
ir/: safe_snippet_1.ll  safe_snippet_2.ll  safe_snippet_3.ll  safe_snippet_5.ll  safe_snippet_6.ll  safe_snippet_7.ll  unsafe_snippet_1.ll  unsafe_snippet_2.ll  unsafe_snippet_3.ll  unsafe_snippet_5.ll  unsafe_snippet_6.ll  unsafe_snippet_7.ll
src/: feature_extractor.rs  main.rs  ml.rs  static_analysis.rs  vuln_detector.rs
