[package]
name = "rust-vuln-detector"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
linfa = "0.6"
linfa-trees = "0.6"
csv = "1.2"
ndarray = "0.15"
linfa-logistic = "0.6"
linfa-linear = "0.6"
linfa-clustering = "0.6"
linfa-nn = "0.6"
rand = "0.8"  
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0.40"
[[bin]]
name = "rust-vuln-detector"
path = "src/main.rs"
